--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,4 +16,5 @@ jobs:
     - name: Run migrations
       run: python manage.py migrate
     - name: Run tests
-      run: python manage.py test tests functional_tests
+      run: python -m coverage run --source="." manage.py test
+      run: python -m coverage report
