--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run migrations
-      run: python manage.py migrate
+      run: |
+        python manage.py migrate
+        python3 manage.py loaddata initial_data
     - name: Run tests
       run: |
         python -m coverage run --source="." manage.py test
