--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Run migrations
       run: |
         python manage.py migrate
-        python3 manage.py loaddata initial_data
+        python manage.py loaddata initial_data
     - name: Run tests
       run: |
         python -m coverage run --source="." manage.py test
